--- a/MONITOR/html_test.html
+++ b/MONITOR/html_test.html
@@ -6,7 +6,15 @@
     <title>Arduino Data</title>
     <link rel="stylesheet" href="monitor.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-</head>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"> </script>
+    <script src="https://cdn.plot.ly/plotly-2.35.0.min.js" charset="utf-8"></script>
+  </head>
 <body>
     <header>
         <nav>
@@ -24,17 +32,30 @@
           <h1>{{ parrafo }}</h1>
       </section>
 
-      <section id="section2" class="features">
-          <h2>Sensor DHT22</h2>
-          <div class="feature-item">
-              <h3>Temperatura</h3>
-              <p>{{ temperatura }}</p>
-          </div>
-          <div class="feature-item">
-            <h3>Humedad</h3>
-            <p>{{ humedad }}</p>
-        </div>
-      </section>
+        <section id="secDispositivos">
+            <h2>Red y dispositivos conectados</h2>
+            <div class="feature-item">
+                <h3>Red actual</h3>
+                <p>{{ red }}</p>
+            </div>
+            <button hidden id="buscarDispositivos" @click="obtenerDispositivosConectados">Escanear los dispositivos conectados</button>
+            <h3>Dispositivos conectados</h3>
+            <div id="grupo_tarjetas" class="cards-container">
+            </div>
+        </section>
+
+        <section id="secTemperatura">
+            <h2>Sensor DHT22</h2>
+            <div class="feature-item">
+                <h3>Temperatura</h3>
+                <p>{{ temperatura }}</p>
+                <div id="chart"></div>
+            </div>
+            <div class="feature-item">
+                <h3>Humedad</h3>
+                <p>{{ humedad }}</p>
+            </div>
+        </section>
 
       <section id="section3" class="proximidad">
         <h2>Sensor MD-SR04</h2>
